Rename to ashtabula

--- a/frontend/src/main/resources/templates/fragments/header.html
+++ b/frontend/src/main/resources/templates/fragments/header.html
@@ -3,7 +3,7 @@
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
                 <img src="/images/shop.png" height="24" class="d-inline-block align-text-top">
-                Catalog Demo
+                Ashtabula
             </a>
             <a href="/checkout" th:if="${includeCart}">
                 <span th:text="${session.cart.size}" th:unless="${session.cart == null}" class="badge bg-primary rounded-pill"></span>
