--- a/frontend/src/main/resources/templates/fragments/logo.html
+++ b/frontend/src/main/resources/templates/fragments/logo.html
@@ -1,4 +1,5 @@
 <div class="text-center py-5" th:fragment="logo">
     <img class="d-block mx-auto mb-4" src="/images/shop.png" />
-    <h1 class="display-5 fw-bold text-body-emphasis">Catalog Demo</h1>
+    <h1 class="display-5 fw-bold text-body-emphasis">Ashtabula</h1>
+    <p class="lead"><em>Because we're not Amazon.</em></p>
 </div>
