--- a/payment-history/src/main/resources/templates/paymentDetails.html
+++ b/payment-history/src/main/resources/templates/paymentDetails.html
@@ -15,7 +15,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">
                     <img src="/images/shop.png" height="24" class="d-inline-block align-text-top">
-                    Catalog Demo
+                    Ashtabula
                 </a>
             </div>
         </nav>
@@ -23,7 +23,8 @@
         <div class="container">
             <div class="text-center py-5">
                 <img class="d-block mx-auto mb-4" src="/images/shop.png" />
-                <h1 class="display-5 fw-bold text-body-emphasis">Catalog Demo</h1>
+                <h1 class="display-5 fw-bold text-body-emphasis">Ashtabula</h1>
+                <p class="lead"><em>Because we're not Amazon.</em></p>
             </div>
             <div class="row">
                 <div class="col-10"><h2>Payment Details</h2></div>
